--- a/SharpCRUD.DataAccess/SharpCRUD.DataAccess.csproj
+++ b/SharpCRUD.DataAccess/SharpCRUD.DataAccess.csproj
@@ -7,8 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Models\" />
-    <Folder Include="UseCases\CustomerModels\" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.2" />
   </ItemGroup>
 
 </Project>
