--- a/SharpCRUD.Domain/SharpCRUD.Domain.csproj
+++ b/SharpCRUD.Domain/SharpCRUD.Domain.csproj
@@ -7,8 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Models\" />
     <Folder Include="UseCases\CustomerModels\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
   </ItemGroup>
 
 </Project>
