--- a/SharpCRUD.Domain/SharpCRUD.Domain.csproj
+++ b/SharpCRUD.Domain/SharpCRUD.Domain.csproj
@@ -14,4 +14,9 @@
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\SharpCRUD.DataAccess\SharpCRUD.DataAccess.csproj" />
+    <ProjectReference Include="..\SharpCRUD.Shared\SharpCRUD.Shared.csproj" />
+  </ItemGroup>
+
 </Project>
