--- a/SharpCRUD.Domain/SharpCRUD.Domain.csproj
+++ b/SharpCRUD.Domain/SharpCRUD.Domain.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Folder Include="Extensions\" />
     <Folder Include="UseCases\CustomerModels\" />
   </ItemGroup>
 
