🔵IAssembleService: Returns an instance of assemble result and not the entity directly, this is because i added a new entity: CustomerAddress. Should be able to save a list of adresses connected to the current customer

--- a/SharpCRUD.Domain/SharpCRUD.Domain.csproj
+++ b/SharpCRUD.Domain/SharpCRUD.Domain.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <Folder Include="Extensions\" />
+    <Folder Include="Services\CustomerModels\Address\" />
     <Folder Include="UseCases\CustomerModels\" />
   </ItemGroup>
 
