🟢SaveCustomerCommandTest: Added new project Domain.UseCases using mediator pattern for communication with domain services

--- a/SharpCRUD.Testing.Shared/SharpCRUD.Testing.Shared.csproj
+++ b/SharpCRUD.Testing.Shared/SharpCRUD.Testing.Shared.csproj
@@ -13,6 +13,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\SharpCRUD.DataAccess\SharpCRUD.DataAccess.csproj" />
+    <ProjectReference Include="..\SharpCRUD.Domain.UseCases\SharpCRUD.Domain.UseCases.csproj" />
     <ProjectReference Include="..\SharpCRUD.Domain\SharpCRUD.Domain.csproj" />
   </ItemGroup>
 
