--- a/SharpCRUD.Domain.Tests/SharpCRUD.Domain.Tests.csproj
+++ b/SharpCRUD.Domain.Tests/SharpCRUD.Domain.Tests.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MediatR" Version="12.0.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.3.2" />
     <PackageReference Include="NUnit" Version="3.13.3" />
     <PackageReference Include="NUnit3TestAdapter" Version="4.2.1" />
@@ -17,6 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\SharpCRUD.Domain.UseCases\SharpCRUD.Domain.UseCases.csproj" />
     <ProjectReference Include="..\SharpCRUD.Domain\SharpCRUD.Domain.csproj" />
     <ProjectReference Include="..\SharpCRUD.Testing.Shared\SharpCRUD.Testing.Shared.csproj" />
   </ItemGroup>
