--- a/SharpCRUD.Domain/SharpCRUD.Domain.csproj
+++ b/SharpCRUD.Domain/SharpCRUD.Domain.csproj
@@ -13,10 +13,12 @@
   <ItemGroup>
     <PackageReference Include="FluentValidation.AspNetCore" Version="11.2.2" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
+	  <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.2" />
+	  <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="7.0.2" />
+	  <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.2" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\SharpCRUD.DataAccess\SharpCRUD.DataAccess.csproj" />
     <ProjectReference Include="..\SharpCRUD.Shared\SharpCRUD.Shared.csproj" />
   </ItemGroup>
 
