--- a/SharpCRUD.Domain.UseCases/SharpCRUD.Domain.UseCases.csproj
+++ b/SharpCRUD.Domain.UseCases/SharpCRUD.Domain.UseCases.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <LangVersion>preview</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
@@ -13,6 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\SharpCRUD.Domain\SharpCRUD.Domain.csproj" />
     <ProjectReference Include="..\SharpCRUD.Shared\SharpCRUD.Shared.csproj" />
   </ItemGroup>
 
