--- a/SharpCRUD.Infrastructure/SharpCRUD.Infrastructure.csproj
+++ b/SharpCRUD.Infrastructure/SharpCRUD.Infrastructure.csproj
@@ -8,9 +8,12 @@
 
 	<ItemGroup>
 		<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.2" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="7.0.2" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.2" />
 	</ItemGroup>
 
 	<ItemGroup>
-	  <ProjectReference Include="..\SharpCRUD.Library\SharpCRUD.Library.csproj" />
+	  <ProjectReference Include="..\SharpCRUD.DataAccess\SharpCRUD.DataAccess.csproj" />
 	</ItemGroup>
 </Project>
