--- a/Frontend/Frontend.csproj
+++ b/Frontend/Frontend.csproj
@@ -13,6 +13,11 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\SharpCRUD.Communication.Http\SharpCRUD.Communication.Http.csproj" />
+    <ProjectReference Include="..\SharpCRUD.Communication\SharpCRUD.Communication.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ServiceWorker Include="wwwroot\service-worker.js" PublishedContent="wwwroot\service-worker.published.js" />
   </ItemGroup>
 
